2007-01-31  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa_sdef.c:
	Better error messages for OSA.app and #merge.

	* extconf.rb,
	  bin/rdoc-osa,
	  data/rubyosa/rdoc_html.rb,
	  post-install.rb:
	- Better RDoc generation (removed the Files frame, references to the generated
	  dummy Ruby file and source code, changed the default HTML title) ;
	- Make sure the rdoc-osa tool and the new template are properly installed in 
	  the right locations by 'make install'.

	* src/rbosa.c:
	Make sure we send events with the user-can-interact flag set on.

2007-01-30  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	When trying to merge an sdef in the current application, if the LaunchServices
	couldn't locate it by its name, let's be clever and look inside the 
	ScriptingAdditions locations.

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h,
	  bin/rdoc-osa,
	  sample/misc/sdef.rb,
	  tests/tc_itunes.rb,
	  tests/tc_ichat.rb,
	  tests/tc_textedit.rb,
	  tests/tc_get_app.rb,
	  TODO:
	- Added support for merging additional sdef to an existing application object
	  by using the #merge method ;
	- API change: OSA.app() now accept an inline Hash syntax with :by_name, 
	  :by_path, :by_bundle_id and :by_signature keys/values. The old 
	  OSA.app_with_* methods have been deprecated ;
	- Updated samples and test cases to the new API.

2007-01-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_ichat.rb,
	  src/lib/rbosa.rb,
	  bin/rdoc-osa:
	- Fixed properties returning 'list_of_*' types (and added some tests cases) ;
	- Small RDoc fixes.

	* tests/tc_textedit.rb,
	  src/lib/rbosa.rb,
	  TODO:
	Added the possibility to specify optional arguments using an inline-Hash
	syntax (the old way is also still possible).

	* tests/tc_textedit.rb,
	  tests/as.rb,
	  tests/tc_get_app.rb,
	  src/lib/rbosa.rb,
	  TODO:
	Get rid of costly evalulations. Added more test cases.
