@@ -1,3 +1,9 @@
+2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb,
+	  src/rbosa.c:
+	Better inspect methods for OSA::Element and OSA::ObjectSpecifierList.
+
 2007-01-31  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb,
